--- a/HabitPromiss/HabitPromiss/Base.lproj/LaunchScreen.storyboard
+++ b/HabitPromiss/HabitPromiss/Base.lproj/LaunchScreen.storyboard
@@ -18,27 +18,37 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="screen" translatesAutoresizingMaskIntoConstraints="NO" id="hDC-aJ-iCj">
-                                <rect key="frame" x="67" y="208.5" width="240" height="150"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="screen" translatesAutoresizingMaskIntoConstraints="NO" id="GME-FN-zLo">
+                                <rect key="frame" x="87" y="133.5" width="200" height="200"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="150" id="NP1-ip-eJ1"/>
-                                    <constraint firstAttribute="width" constant="240" id="q8P-4M-kOH"/>
+                                    <constraint firstAttribute="height" constant="200" id="7R6-KF-IOe"/>
+                                    <constraint firstAttribute="width" constant="200" id="CdL-WM-4vP"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="습관만들기" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="in9-6H-i7c">
-                                <rect key="frame" x="0.0" y="366" width="375" height="39.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="습관을 만들자" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="in9-6H-i7c">
+                                <rect key="frame" x="98" y="373" width="179" height="40"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="33"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="티끌모아 습관" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B0V-N0-yWm">
+                                <rect key="frame" x="141" y="427" width="93" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="in9-6H-i7c" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="XuK-f6-YnJ"/>
-                            <constraint firstItem="hDC-aJ-iCj" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="-50" id="d1V-tX-5zJ"/>
-                            <constraint firstItem="hDC-aJ-iCj" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="g3E-mr-9bF"/>
-                            <constraint firstItem="in9-6H-i7c" firstAttribute="top" secondItem="hDC-aJ-iCj" secondAttribute="bottom" constant="8" id="pLl-qf-oEF"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="in9-6H-i7c" secondAttribute="trailing" id="rJh-mW-5yh"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="B0V-N0-yWm" secondAttribute="bottom" constant="219" id="0gO-7q-FWJ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="B0V-N0-yWm" secondAttribute="trailing" constant="141" id="812-hA-nKh"/>
+                            <constraint firstItem="in9-6H-i7c" firstAttribute="top" secondItem="GME-FN-zLo" secondAttribute="bottom" constant="39.5" id="HFj-RQ-GTo"/>
+                            <constraint firstItem="in9-6H-i7c" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="98" id="IiI-ff-ghD"/>
+                            <constraint firstItem="B0V-N0-yWm" firstAttribute="top" secondItem="in9-6H-i7c" secondAttribute="bottom" constant="14" id="UM2-5b-rzX"/>
+                            <constraint firstItem="B0V-N0-yWm" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="141" id="d9t-ee-PVg"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="in9-6H-i7c" secondAttribute="trailing" constant="98" id="e4B-Yn-YYv"/>
+                            <constraint firstItem="GME-FN-zLo" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="-100" id="r1k-sC-Oiw"/>
+                            <constraint firstItem="GME-FN-zLo" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="sbQ-AB-4NG"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
