--- a/HabitPromiss/HabitPromiss/scene/View/Base.lproj/Main.storyboard
+++ b/HabitPromiss/HabitPromiss/scene/View/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="sJo-nC-Idc">
-                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <rect key="frame" x="0.0" y="126" width="375" height="492"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="sectionIndexBackgroundColor" red="0.75406885150000003" green="0.75408679249999999" blue="0.75407713649999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
@@ -55,9 +55,9 @@
                                             <constraints>
                                                 <constraint firstItem="WXY-sw-Gd3" firstAttribute="leading" secondItem="svQ-rB-6dF" secondAttribute="leading" constant="10" id="1XA-KY-UTZ"/>
                                                 <constraint firstItem="WXY-sw-Gd3" firstAttribute="top" secondItem="svQ-rB-6dF" secondAttribute="top" constant="5" id="3LB-p6-iqv"/>
-                                                <constraint firstItem="hMX-tx-ZZZ" firstAttribute="top" secondItem="svQ-rB-6dF" secondAttribute="top" constant="15" id="8vk-iq-j8g"/>
+                                                <constraint firstItem="hMX-tx-ZZZ" firstAttribute="top" secondItem="WXY-sw-Gd3" secondAttribute="top" constant="10" id="8vk-iq-j8g"/>
                                                 <constraint firstAttribute="trailing" secondItem="WXY-sw-Gd3" secondAttribute="trailing" constant="10" id="M7c-vN-g5N"/>
-                                                <constraint firstItem="hMX-tx-ZZZ" firstAttribute="leading" secondItem="svQ-rB-6dF" secondAttribute="leading" constant="20" id="PB7-GD-9Ll"/>
+                                                <constraint firstItem="hMX-tx-ZZZ" firstAttribute="leading" secondItem="WXY-sw-Gd3" secondAttribute="leading" constant="10" id="PB7-GD-9Ll"/>
                                                 <constraint firstAttribute="bottom" secondItem="WXY-sw-Gd3" secondAttribute="bottom" constant="10" id="Yq1-it-3pA"/>
                                                 <constraint firstItem="gz1-7t-9cl" firstAttribute="bottom" secondItem="hMX-tx-ZZZ" secondAttribute="bottom" id="cH5-0G-PWl"/>
                                                 <constraint firstItem="gz1-7t-9cl" firstAttribute="leading" secondItem="hMX-tx-ZZZ" secondAttribute="trailing" constant="20" id="lBD-Oc-FO3"/>
@@ -82,7 +82,7 @@
                             <constraint firstItem="sJo-nC-Idc" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="51L-LR-iW9"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="sJo-nC-Idc" secondAttribute="bottom" id="EzV-W6-pZA"/>
                             <constraint firstItem="sJo-nC-Idc" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Q6b-ns-c6O"/>
-                            <constraint firstItem="sJo-nC-Idc" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="X3l-3D-CAt"/>
+                            <constraint firstItem="sJo-nC-Idc" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="X3l-3D-CAt"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -439,6 +439,9 @@
                                 <rect key="frame" x="307" y="33" width="52" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="자랑하기"/>
+                                <connections>
+                                    <action selector="kakaoLinkButton:" destination="tAb-77-Xy0" eventType="touchUpInside" id="KhY-4R-zj9"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sak-zj-t40">
                                 <rect key="frame" x="172" y="33" width="30" height="30"/>
@@ -459,6 +462,7 @@
                     </view>
                     <connections>
                         <outlet property="habitName" destination="mdy-0k-0fe" id="fFo-hQ-Z87"/>
+                        <outlet property="kakaoLinkButton" destination="0HT-54-8An" id="s82-cQ-f7M"/>
                         <outlet property="persent" destination="SqZ-jk-htZ" id="nST-3Y-XYG"/>
                         <outlet property="pieChart" destination="2zC-Kj-Yua" id="Utv-B3-XXd"/>
                         <outlet property="userName" destination="oy6-i4-Uhj" id="8en-rw-E7M"/>
@@ -631,8 +635,8 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="KnN-Mp-1gX" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="목록" image="hand" id="1pM-wq-R8f"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="yNH-6G-Ri4">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="yNH-6G-Ri4">
+                        <rect key="frame" x="0.0" y="20" width="375" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
