--- a/HabitPromiss/HabitPromiss/scene/View/Base.lproj/Main.storyboard
+++ b/HabitPromiss/HabitPromiss/scene/View/Base.lproj/Main.storyboard
@@ -194,6 +194,9 @@
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="Yk0-cU-7kE" id="bmc-tr-eZh"/>
+                                </connections>
                             </textField>
                             <textField opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="2018.05.25" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8da-RQ-UUz">
                                 <rect key="frame" x="110" y="155" width="119" height="27"/>
@@ -439,16 +442,13 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="자랑하기"/>
                                 <connections>
-                                    <action selector="didPushedSharedButton:" destination="tAb-77-Xy0" eventType="touchUpInside" id="ED6-FJ-dmD"/>
+                                    <action selector="kakaoLinkButton:" destination="tAb-77-Xy0" eventType="touchUpInside" id="LHd-gU-87p"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sak-zj-t40">
                                 <rect key="frame" x="172" y="33" width="30" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="뒤로"/>
-                                <connections>
-                                    <action selector="didTapDissMiss:" destination="tAb-77-Xy0" eventType="touchUpInside" id="OFK-DN-dx5"/>
-                                </connections>
                             </button>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2zC-Kj-Yua" customClass="PieChartView" customModule="Charts">
                                 <rect key="frame" x="0.0" y="123" width="375" height="544"/>
@@ -461,7 +461,6 @@
                     </view>
                     <connections>
                         <outlet property="habitName" destination="mdy-0k-0fe" id="fFo-hQ-Z87"/>
-                        <outlet property="kakaoLinkButton" destination="0HT-54-8An" id="s82-cQ-f7M"/>
                         <outlet property="persent" destination="SqZ-jk-htZ" id="nST-3Y-XYG"/>
                         <outlet property="pieChart" destination="2zC-Kj-Yua" id="Utv-B3-XXd"/>
                         <outlet property="userName" destination="oy6-i4-Uhj" id="8en-rw-E7M"/>
@@ -637,6 +636,10 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="yNH-6G-Ri4">
                         <rect key="frame" x="0.0" y="20" width="375" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <textAttributes key="largeTitleTextAttributes">
+                            <color key="textColor" red="0.98431372549999996" green="0.0078431372550000003" blue="0.50196078430000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <userDefinedRuntimeAttributes>
